# cg-io

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/1-intro/: CMakeLists.txt
src/1-intro/01-setup_SDL/: CMakeLists.txt  sdl2-image-test.cpp  setup_SDL.cpp
